Emphasise the name

--- a/index.html
+++ b/index.html
@@ -29,39 +29,63 @@
         </div>
 
     </nav>
-    <section id="Heading">
-        <div class="container">
-            <div class="row">
-                <div class="heading_wrapper">
-            <h1 class="section_title">
-                Beautiful React Templates<span class="purple">for you</span>
-            </h1>
-            <div>
-            <p>Our templates are easy to setup, understand and customize. Fully modular components with a variety of
-                pages
-                and components.
-            </p>
-        </div>
-        </div>
-        </div>
-    </div>
-        
-    </section>
+    
     <section id="email">
         <div class="container">
-            <div class="row">
-                <div class="email_wrapper">
-                    <input class="landing-input" type="email" placeholder="Your E-mail Address">
-                    <button class="btn-input">Get Started</button>
-                    <img class="logo_strip" src="./assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="">
+          <div class="row landing-row">
+            <div class="landing_wrapper">
+              <div class="heading_wrapper">
+                <h1 class="section_title">
+                  Beautiful React Templates<span class="purple">for you</span>
+                </h1>
+                <div>
+                  <p>
+                    Our templates are easy to setup, understand and customize.
+                    Fully modular components with a variety of pages and
+                    components.
+                  </p>
                 </div>
+              </div>
+              <div class="email_wrapper">
+                <input
+                  class="landing-input"
+                  type="email"
+                  placeholder="Your E-mail Address"
+                />
+                <button class="btn-input">Get Started</button>
+                <img
+                  class="logo_strip"
+                  src="./assets/customers-logo-strip.680ac7c2e8ae28161d2c.png"
+                  alt=""
+                />
+              </div>
             </div>
-            <div>
-                <img class="design-ill" src="./assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg"
-                    alt="">
+            <div class="image_wrapper">
+              <img
+                class="design-ill"
+                src="./assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg"
+                alt=""
+              />
             </div>
+          </div>
         </div>
-    </section>
+      </section>
+      <section id="features">
+        <div class="fea_container">
+          <div class="row fea_row">
+            <div class="fea_wrapper">
+              <div class="fea_title">
+                 <span class="purple">FEATURES</span>
+                <h2>We have Amazing <span class="purple"> Service. </h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus animi quo modi nulla ipsa dolorum eligendi aperiam autem sit corporis.</p>
+              </h2>
+            </div>
+          </div>
+          </div>
+
+        </div>
+
+      </section>
 </body>
 
 </html>
