--- a/index.html
+++ b/index.html
@@ -81,11 +81,81 @@
               </h2>
             </div>
           </div>
+          <div class="features__lists">
+            <div class="features__list">
+                <span class="imgcontainer">
+                    <img src="./assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" alt="">
+                </span>
+                <span class="textcontainer">
+                    <h2>Secure</h2>
+                    <p class="textcontainer__para">
+                        We strictly only deal with vendors that provide top notch security.
+                    </p>
+                </span>
+            </div>
+            
+            <div class="features__list">
+              <span class="imgcontainer">
+                  <img src="./assets/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg" alt="">
+              </span>
+              <span class="textcontainer">
+                  <h2>24/7 Support</h2>
+                  <p class="textcontainer__para">
+                      We strictly only deal with vendors that provide top notch security.
+                  </p>
+              </span>
           </div>
 
+          <div class="features__list">
+            <span class="imgcontainer">
+                <img src="./assets/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg" alt="">
+            </span>
+            <span class="textcontainer">
+                <h2>Customizable</h2>
+                <p class="textcontainer__para">
+                    We strictly only deal with vendors that provide top notch security.
+                </p>
+            </span>
         </div>
 
-      </section>
-</body>
+        <div class="features__list">
+          <span class="imgcontainer">
+              <img src="./assets//reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg" alt="">
+          </span>
+          <span class="textcontainer">
+              <h2>Reliable</h2>
+              <p class="textcontainer__para">
+                  We strictly only deal with vendors that provide top notch security.
+              </p>
+          </span>
+      </div>
 
-</html>
+      <div class="features__list">
+        <span class="imgcontainer">
+            <img src="./assets/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt="">
+        </span>
+        <span class="textcontainer">
+            <h2>Fast</h2>
+            <p class="textcontainer__para">
+                We strictly only deal with vendors that provide top notch security.
+            </p>
+        </span>
+    </div>
+
+    <div class="features__list">
+      <span class="imgcontainer">
+          <img src="./assets/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg" alt="">
+      </span>
+      <span class="textcontainer">
+          <h2>Easy</h2>
+          <p class="textcontainer__para">
+              We strictly only deal with vendors that provide top notch security.
+          </p>
+      </span>
+  </div>
+           
+        </div>
+          </div>
+        </div>
+      </section>
+
