--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <div class="landing_wrapper">
               <div class="heading_wrapper">
                 <h1 class="section_title">
-                  Beautiful React Templates<span class="purple">for you</span>
+                  Beautiful React Templates<span class="purple"> for you</span>
                 </h1>
                 <div>
-                  <p>
+                  <p class="para">
                     Our templates are easy to setup, understand and customize.
                     Fully modular components with a variety of pages and
                     components.
@@ -53,7 +53,11 @@
                   placeholder="Your E-mail Address"
                 />
                 <button class="btn-input">Get Started</button>
-                <img
+                
+              </div>
+              <div>
+                <h5>OUR TRUSTED CUSTOMERS</h5>
+              <img
                   class="logo_strip"
                   src="./assets/customers-logo-strip.680ac7c2e8ae28161d2c.png"
                   alt=""
@@ -75,7 +79,7 @@
           <div class="row fea_row">
             <div class="fea_wrapper">
               <div class="fea_title">
-                 <span class="purple">FEATURES</span>
+                 <h4 class="purple feature_title">FEATURES</h4>
                 <h2>We have Amazing <span class="purple"> Service. </h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus animi quo modi nulla ipsa dolorum eligendi aperiam autem sit corporis.</p>
               </h2>
