Emphasise the name

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="fea_wrapper">
           <div class="fea_title">
             <h4 class="purple feature_title">FEATURES</h4>
-            <h2 class="para_2">We have Amazing <span class="purple"> Service. </h2>
+            <h2 class="head">We have Amazing <span class="purple"> Service. </h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus animi quo modi nulla ipsa
               dolorum eligendi aperiam autem sit corporis.</p>
             </h2>
@@ -151,26 +151,42 @@
     </div>
   </section>
   <section id class="quality_work">
-    <div class= "qua_container">
+    <div class="qua_container">
       <div class="row qua_row">
         <div class="qua_wrapper">
-          <div class="qua_title">
+          <div class="qua_wrapper_area">
+
             <h1 class="purple qua_title">QUALITY WORK</h1>
-            <h1 class="para_3">Designed & Developed by <span class="purple">  Professionals.</h1>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, similique non ex dolore natus sed. Ullam sequi totam aliquid nisi?</p>
-              <button>Learn More</button>
-              <div class="hero-1_wrapper">
-                <img class="hero-1" src="./assets/hero-screenshot-1.40a097b525c2f8c9808e.png" alt="">
-              </div>
+            <h1 class="head_2">Designed & Developed by <span class="purple"> Professionals.</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, similique non ex dolore natus sed.
+              Ullam sequi totam aliquid nisi?</p>
+            <button>Learn More</button>
           </div>
-
+          <div class="hero-1_wrapper">
+            <img class="hero-1" src="./assets/hero-screenshot-1.40a097b525c2f8c9808e.png" alt="">
+          </div>
         </div>
-
       </div>
-
-
     </div>
-
+    </div>
+  </section>
+  <section id class="steps">
+    <div class="stp_container">
+      <div class="row row_stp">
+        <div class="stp_wrapper">
+          <div class="stp_wrapper_area">
+            <div class="hero-2_wrapper">
+              <img class="hero-2" src="./assets/hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
+            </div>
+            <div class="purple stp_title"><span>STEPS</span></div>
+            <h1 class="head_3">Easy to <span class="purple"> Get Started.</h1>
+              
+            
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 </body>
 
