Emphasise the name

--- a/index.html
+++ b/index.html
@@ -172,30 +172,62 @@
   </section>
   <section id class="steps">
     <div class="stp_container">
-      <div class="row row_stp">
+      <div class="row ">
         <div class="stp_wrapper">
           <div class="stp_wrapper_area">
             <div class="hero-2_wrapper">
               <img class="hero-2" src="./assets/hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
             </div>
             <div>
-              <div class="purple stp_title"><span>STEPS</span></div>
-              <h1 class="head_3">Easy to <span class="purple"> Get Started.</h1>
-            </div>
-            <div class="stp_prescription">
-              <div>01</div>
               <div>
                 <div>
-                  <span>Register</span>
+                  <div class="purple stp_title"><span>STEPS</span></div>
+                  <h1 class="head_3">Easy to <span class="purple"> Get Started.</h1>
+                </div>
+                <div class="stp_prescription">
+                  <div>01</div>
+                  <div>
+                    <div>
+                      <span>Register</span>
+                    </div>
+                    <div>
+                      Create an account with us using Google or Facebook.
+                    </div>
+                  </div>
+                </div>
+                <div>02</div>
+                <div>
+
+                  <div>
+
+                    <span>Download</span>
+
+                  </div>
+
+                  <div>
+
+                    Browse and Download the template that you like from the marketplace.
+
+                  </div>
+
+                </div>
+
+              </div>
+              <div>03</div>
+              <div>
+                <div>
+                  <span>Run</span>
                 </div>
                 <div>
-                  Create an account with us using Google or Facebook.
+                  Follow the instruction to setup and customize the template to your needs.
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
+    </div>
     </div>
     </div>
   </section>
