Emphasise the name

--- a/index.html
+++ b/index.html
@@ -194,34 +194,24 @@
                       Create an account with us using Google or Facebook.
                     </div>
                   </div>
-                </div>
-                <div>02</div>
-                <div>
-
+                  <div>01</div>
                   <div>
-
-                    <span>Download</span>
-
+                    <div>
+                      <span>Register</span>
+                    </div>
+                    <div>
+                      Create an account with us using Google or Facebook.
+                    </div>
                   </div>
-
+                  <div>01</div>
                   <div>
-
-                    Browse and Download the template that you like from the marketplace.
-
+                    <div>
+                      <span>Register</span>
+                    </div>
+                    <div>
+                      Create an account with us using Google or Facebook.
+                    </div>
                   </div>
-
-                </div>
-
-              </div>
-              <div>03</div>
-              <div>
-                <div>
-                  <span>Run</span>
-                </div>
-                <div>
-                  Follow the instruction to setup and customize the template to your needs.
-                </div>
-              </div>
             </div>
           </div>
         </div>
