Emphasise the name

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <div class="row v_row">
             <div class="v_description">
               <div class="purple v_tag"><span>VAULE</span></div>
-              <h1 class="val_title">We Always Abide by Our <span class="purple"> Principles..</h1>
+              <h1 class="val_title">We Always Abide by Our <span class="purple"> Principles.</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur nostrum vel, ipsa nisi sed sequi
                 voluptas saepe atque eum quas perspiciatis consequuntur exercitationem! Atque minus laboriosam, quos
                 placeat omnis aliquam.</p>
