Emphasise the name

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div class="stp_container">
           <div class="row stp_row ">
             <figure class="stp_wrapper">
-              <img src="./assets/hero-screenshot-2.241aac1fbc66db29d873.png" alt="stp_img">
+              <img src="./assets/hero-screenshot-2.241aac1fbc66db29d873.png" alt="" class="stp_img">
             </figure>
             <div>
               <div class="purple stp_tag"><span>STEPS</span></div>
