Emphasise the name

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
         <li><a href="" class="nav_link">Login</a></li>
         <li><a href="" class="nav_link nav_link-btn">Sign Up</a></li>
       </ul>
+      <button class="btn_menu" onclick="openMenu()">
+        <i class="fas fa-bars"></i>
+      </button>
     </div>
-    <button class="btn_menu" onclick="openMenu()">
-      <i class="fas fa-bars"></i>
-    </button>
+  
     <div class="menu_backdrop">
       <button class="btn_menu btn_menu--close" onclick="closeMenu()">
         <i class="fas fa-times"></i>
@@ -458,7 +459,7 @@
             <a class="footer_column--link">Disclaimer</a>
           </div>
         </div>
-        <div class="footer_div"></div>
+        <div class="footer_div">
         <div class="footer_btm">
 
           <img src="./assets/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" alt="" class="footer_logo">
@@ -474,10 +475,10 @@
             </a>
           </div>
         </div>
-
+      </div>
 
       </div>
-      </div>
+      
 
     </footer>
 </body>
