--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <li class="menu_list"><a href="#" class="menu_link" onclick="closeMenu()">Pricing</a></li>
         <li class="menu_list"><a href="#" class="menu_link" onclick="closeMenu()">Contact</a></li>
         <li class="menu_list"><a href="#" class="menu_link" onclick="closeMenu()">Login</a></li>
-        <li class="menu_list"><a href="#" class="menu_link" onclick="closeMenu()">Sign Up</a></li>
+        <li class="menu_list"><a href="#" class="menu_link nav_link-btn" onclick="closeMenu()">Sign Up</a></li>
       </ul>
     </div>
   </nav>
